feat: Support burn .wic to eMMC
Changelogs:
1. Adding the image parameter,Used to burn .wic images file to eMMC

Signed-off-by: xuxiang <xuxiang@eswincomputing.com>

--- a/esburn/linux/config.ini
+++ b/esburn/linux/config.ini
@@ -6,6 +6,8 @@ erase_partition = n
 # serverip = 192.168.1.126
 directory = /home/user/hf106/image
 bootloader = bootloader_ddr5_secboot.bin
+# Burn .wic image files to emmc
+# image = demo-coreip-xfce4-hifive-premier-p550.wic
 # Incremental updates boot filesystem image name
 bootfs = demo-coreip-xfce4-hifive-premier-p550.bootfs.ext4
 # Incremental updates root filesystem image name
